// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshots ClassName 1`] = `
<span
  className="sc-AxjAm jzbbdJ className"
>
  hei
</span>
`;

exports[`Text Snapshots No props 1`] = `
<span
  className="sc-AxjAm jzbbdJ"
>
  This is a Text
</span>
`;

exports[`Text Snapshots no Children 1`] = `
<span
  className="sc-AxjAm jzbbdJ"
/>
`;
